# judicial-core

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs  sleep_protocol_test.rs  violation_scenarios.rs
src/: blue_whale_sleep.rs  judicial_core.rs  ledger.rs  lib.rs  sleep_protocol.rs  verdicts.rs
src/integration/: mod.rs  python_ffi.rs
src/laws/: conflict_resolution.rs  master_pair.rs  mod.rs  priorities.rs
tests/: comprehensive_test.rs
