[package]
name = "judicial-core"
version = "0.1.0"
edition = "2021"
description = "Unbreakable governance spine for AI systems - Master Pair enforcement"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
libc = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
