[package]
name = "judicial-core"
version = "0.1.0"
edition = "2021"
description = "Unbreakable governance spine for AI systems - Master Pair enforcement"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
libc = "0.2"
pyo3 = { version = "0.18", features = ["extension-module"] }

[lib]
name = "judicial_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = []  # Enable Python bindings
